refactor: update extension system base and constants